delete 'e' from header-notification-toggle

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </section>
                 <section>
                     <span class="ml-2 ml-md-4 position-relative">
-                        <span class="pointer" id="header-notification-toggle">
+                        <span class="pointer" id="header-notification-toggl">
                             <i class="far fa-bell"></i><sup class="badge badge-danger">4</sup>
                         </span>
                     <section class="header-notification rounded" id="header-notification">
@@ -91,7 +91,7 @@
                     </section>
                     </span>
                     <span class="ml-2 ml-md-4 position-relative">
-                        <span  class="pointer" id="header-comment-toggle">
+                        <span  class="pointer" id="header-comment-toggl">
                             <i class="far fa-comment-alt"><sup class="badge badge-danger">3</sup></i>
                         </span>
 
